// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Buttons Contained Button: Components/Buttons Contained Button 1`] = `
.c0.c0 {
  min-width: 104px;
  padding: 10px 16px;
  text-transform: none;
  font-size: 0.875rem;
  font-weight: 500;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  color: #0684bd;
  text-align: center;
}

.c0.c0.containedButtonStyle {
  color: #fff;
  box-shadow: unset;
  background-color: #0684bd;
}

.c0.c0.containedButtonStyle:hover {
  opacity: 0.88;
}

.c0.c0.containedButtonStyle.disabled {
  background-color: #bfbfbf;
  color: #fff;
}

.c0.c0.containedButtonStyle:active {
  box-shadow: unset;
}

.c0.c0.textButtonStyle.disabled {
  color: #bfbfbf;
}

.c0.c0.textButtonStyle:hover {
  background-color: rgba(6,132,189,0.12);
}

.c0.c0.outlineButtonStyle {
  border-color: #0684bd;
}

.c0.c0.roundButtonStyle {
  height: 28px;
  border-radius: 28px;
  padding: 0px 16px;
  background-color: #fff;
  color: #0684bd;
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  min-height: unset;
  width: inherit;
}

.c0.c0.roundButtonStyle:hover {
  background-color: #fafafa;
}

.c0.c0.roundButtonStyle:hover:active {
  background-color: #f5f6fb;
}

.c0.c0.roundButtonStyle .rippleVisible {
  opacity: 0.24;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: cBKRfH;
  animation-name: cBKRfH;
}

<div
  style={
    Object {
      "textAlign": "center",
    }
  }
>
  <div>
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained containedButtonStyle MuiButton-raised MuiButton-sizeLarge c0"
      disabled={false}
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        button
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Buttons Fab Button: Components/Buttons Fab Button 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 24px;
  fill: #fff;
}

.c2.c2 {
  min-height: 0;
}

.c1.c1 {
  background-color: #0684bd;
  width: 60px;
  height: 60px;
  box-shadow: 0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12);
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  color: #fff;
}

.c1.c1:hover,
.c1.c1:active {
  background-color: rgb(5,118,170);
}

.c1.c1 .rippleVisible {
  color: rgb(55,156,202);
  opacity: 0.24;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: cBKRfH;
  animation-name: cBKRfH;
}

.c1.c1[disabled] {
  background-color: #0684bd;
  color: #fff;
  box-shadow: 0px 8px 10px -5px rgba(0,0,0,0.2),0px 16px 24px 2px rgba(0,0,0,0.14),0px 6px 30px 5px rgba(0,0,0,0.12);
  opacity: 0.12;
}

.c0 .buttonWrapper {
  margin-right: 20px;
}

<div
  style={
    Object {
      "textAlign": "center",
    }
  }
>
  <div
    className="c0"
  >
    <button
      aria-describedby={null}
      className="MuiButtonBase-root MuiFab-root buttonWrapper c1 c2"
      disabled={false}
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      title={null}
      type="button"
    >
      <span
        className="MuiFab-label"
      >
        <span
          className=" previous icon c3"
        >
          <svg
            className="c4"
            role="img"
            size="large"
          >
            <use
              href="#undefined"
              xlinkHref="#undefined"
            />
          </svg>
        </span>
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <button
      aria-describedby={null}
      className="MuiButtonBase-root MuiFab-root buttonWrapper c1 c2"
      disabled={false}
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      title={null}
      type="button"
    >
      <span
        className="MuiFab-label"
      >
        <span
          className=" forward icon c3"
        >
          <svg
            className="c4"
            role="img"
            size="large"
          >
            <use
              href="#undefined"
              xlinkHref="#undefined"
            />
          </svg>
        </span>
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Buttons Round Button: Components/Buttons Round Button 1`] = `
.c0.c0 {
  min-width: 104px;
  padding: 10px 16px;
  text-transform: none;
  font-size: 0.875rem;
  font-weight: 500;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  color: #0684bd;
  text-align: center;
}

.c0.c0.containedButtonStyle {
  color: #fff;
  box-shadow: 0px 1px 8px 0px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 3px 3px -2px rgba(0,0,0,0.12);
  background-color: #0684bd;
}

.c0.c0.containedButtonStyle:hover {
  opacity: 0.88;
}

.c0.c0.containedButtonStyle.disabled {
  background-color: #bfbfbf;
  color: #fff;
}

.c0.c0.containedButtonStyle:active {
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2),0 1px 1px 0 rgba(0,0,0,0.14),0 2px 1px -1px rgba(0,0,0,0.12);
}

.c0.c0.textButtonStyle.disabled {
  color: #bfbfbf;
}

.c0.c0.textButtonStyle:hover {
  background-color: rgba(6,132,189,0.12);
}

.c0.c0.outlineButtonStyle {
  border-color: #0684bd;
}

.c0.c0.roundButtonStyle {
  height: 28px;
  border-radius: 28px;
  padding: 0px 16px;
  background-color: #fff;
  color: #0684bd;
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  min-height: unset;
  width: inherit;
}

.c0.c0.roundButtonStyle:hover {
  background-color: #fafafa;
}

.c0.c0.roundButtonStyle:hover:active {
  background-color: #f5f6fb;
}

.c0.c0.roundButtonStyle .rippleVisible {
  opacity: 0.24;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: cBKRfH;
  animation-name: cBKRfH;
}

<div
  style={
    Object {
      "textAlign": "center",
    }
  }
>
  <div>
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-fab roundButtonStyle MuiButton-contained containedButtonStyle MuiButton-raised MuiButton-sizeSmall c0"
      disabled={false}
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        button
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Buttons Text Button: Components/Buttons Text Button 1`] = `
.c0.c0 {
  min-width: 104px;
  padding: 10px 16px;
  text-transform: none;
  font-size: 0.875rem;
  font-weight: 500;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  color: #0684bd;
  text-align: center;
}

.c0.c0.containedButtonStyle {
  color: #fff;
  box-shadow: unset;
  background-color: #0684bd;
}

.c0.c0.containedButtonStyle:hover {
  opacity: 0.88;
}

.c0.c0.containedButtonStyle.disabled {
  background-color: #bfbfbf;
  color: #fff;
}

.c0.c0.containedButtonStyle:active {
  box-shadow: unset;
}

.c0.c0.textButtonStyle.disabled {
  color: #bfbfbf;
}

.c0.c0.textButtonStyle:hover {
  background-color: rgba(6,132,189,0.12);
}

.c0.c0.outlineButtonStyle {
  border-color: #0684bd;
}

.c0.c0.roundButtonStyle {
  height: 28px;
  border-radius: 28px;
  padding: 0px 16px;
  background-color: #fff;
  color: #0684bd;
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  min-height: unset;
  width: inherit;
}

.c0.c0.roundButtonStyle:hover {
  background-color: #fafafa;
}

.c0.c0.roundButtonStyle:hover:active {
  background-color: #f5f6fb;
}

.c0.c0.roundButtonStyle .rippleVisible {
  opacity: 0.24;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-animation-name: cBKRfH;
  animation-name: cBKRfH;
}

<div
  style={
    Object {
      "textAlign": "center",
    }
  }
>
  <div>
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-text textButtonStyle MuiButton-flat MuiButton-sizeLarge c0"
      disabled={false}
      onBlur={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        button
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
